# neurond

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/core/: registry.rs
src/engine/: mod.rs  provider.rs  registry.rs
src/federation/: connection.rs  manager.rs  mod.rs  namespace.rs  transport.rs
src/linux/: mod.rs  procfs.rs  systemd.rs
src/providers/: log.rs  mod.rs  process.rs  service.rs  system.rs
src/registration/: heartbeat.rs  mod.rs  register.rs
src/transport/: mcp.rs
src/upstream/: server.rs
tasks/: todo.md
