[package]
name = "neurond"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.8"
rmcp = { version = "0.16", features = ["server", "client", "macros", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client-reqwest", "transport-child-process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
